--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-google-maps": "^9.4.5",
+    "react-scripts": "3.4.1",
+    "tailwindcss": "^1.4.6"
   },
   "scripts": {
+    "build:style": "postcss src/tailwind.css -o src/tailwind.generated.css",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
